// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/HighlightedName Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
  >
    <span
      class="sc-fKFyDc dToKui sc-iwyYcG gAkelF sc-eHfQar gsQmtQ sc-hzMMCg iFTumP"
    >
      Frontend Service
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/HighlightedName With Custom Colors 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
  >
    <span
      class="sc-fKFyDc dToKui sc-iwyYcG brBCdy sc-eHfQar gsQmtQ sc-hzMMCg bOtxeo"
    >
      Frontend Service
    </span>
  </div>
</div>
`;
